--- a/code/app/andriod/Laundry/res/drawable-hdpi/tabbar_text_color.xml
+++ b/code/app/andriod/Laundry/res/drawable-hdpi/tabbar_text_color.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item  android:state_selected="true"
-           android:color="@color/themecolor"
+           android:color="@color/selectedcolor"
         />
     <item android:state_selected="false"
-          android:color="@color/black"
+          android:color="@color/theme_text_color"
         />
 
 </selector>
