--- a/code/app/andriod/Laundry/res/layout/more_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/more_fragment.xml
@@ -24,7 +24,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/more_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
