--- a/code/app/andriod/Laundry/res/layout/activity_main_tabbar.xml
+++ b/code/app/andriod/Laundry/res/layout/activity_main_tabbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>  
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tabbar_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >  
@@ -13,7 +14,7 @@
     <android.support.v4.app.FragmentTabHost
         android:id="@android:id/tabhost"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">  
+        android:layout_height="50dp">  
       
         <FrameLayout
             android:id="@android:id/tabcontent"
