--- a/code/app/andriod/Laundry/res/layout/cart_fragment_default.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_fragment_default.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/head_height"
+        android:layout_height="@dimen/top_head_height"
         android:layout_marginBottom="20dp"
         android:background="@color/themecolor"
         android:orientation="vertical" >
