--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -4,29 +4,41 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/head_height"
-        android:background="@color/themecolor" >
-
+ 
+     <LinearLayout
+         android:id="@+id/title"  
+         android:layout_width="match_parent"
+         android:layout_height="@dimen/top_head_height"
+         android:layout_gravity="center"
+         android:background="@color/themecolor"
+         android:gravity="center"
+         android:orientation="vertical" >
+ 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:text="快客洗涤"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" 
+            android:layout_gravity="center"
             android:textSize="@dimen/head_font_size_sm"/>
-    </RelativeLayout>
+ 
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:text="www.kkxd.com.cn"
+           android:textColor="@color/white"
+           android:textSize="10dp" />
+    
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,38 +47,43 @@
              android:background="@color/greencolor"
             >
             <LinearLayout
+                  android:id="@+id/home_ad_layout"    
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:background="@color/lightyellow" >
-                <android.support.v4.view.ViewPager  
+                <RelativeLayout    
+                   
+				        android:layout_width="fill_parent"    
+				        android:layout_height="wrap_content"   
+				        android:orientation="vertical" >    
+
+                      				                  <android.support.v4.view.ViewPager  
 			        android:id="@+id/home_ad_image"  
 			        android:layout_width="match_parent"  
 			        android:layout_height="200dp"  
 			        android:layout_gravity="center"
 			      
-			        android:background="@color/white"
-			        android:flipInterval="30"
+			        android:background="@drawable/loading_image"
+			     
                       android:persistentDrawingCache="animation" >  
 			    </android.support.v4.view.ViewPager>  
-					<RelativeLayout    
-				        android:layout_width="fill_parent"    
-				        android:layout_height="wrap_content"   
-				        android:orientation="vertical" >    
-				    
+
 				        <LinearLayout    
 				            android:id="@+id/home_ad_image_group"    
 				            android:layout_width="fill_parent"    
 				            android:layout_height="wrap_content"    
 				            android:layout_alignParentBottom="true"   
-				            android:layout_marginBottom="30dp"    
-				            android:gravity="center_horizontal"    
+				            android:layout_marginBottom="20dp" 
+				            android:layout_marginRight="30dp"   
+				            android:gravity="right"    
 				            android:orientation="horizontal" >    
 				        </LinearLayout>    
 				    </RelativeLayout>
     
             </LinearLayout>
            <LinearLayout
+                android:id="@+id/home_gridview_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
    
@@ -107,7 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/home_service_phone"
-                    android:textSize="@dimen/content_font_size" />
+                   />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,7 +135,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/home_direct_order"
-                    android:textSize="@dimen/content_font_size" />
+                    />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
