--- a/code/app/andriod/Laundry/res/layout/home_grid_item.xml
+++ b/code/app/andriod/Laundry/res/layout/home_grid_item.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_margin="10dp"
     android:layout_gravity="center" >
 
     <ImageView
         android:id="@+id/grid_item_img"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center" />
