--- a/code/app/andriod/Laundry/res/layout/user_register.xml
+++ b/code/app/andriod/Laundry/res/layout/user_register.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/head_height"
+        android:layout_height="@dimen/top_head_height"
         android:layout_marginBottom="20dp"
         android:background="@color/white"
         android:orientation="vertical" >
